--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Google Drive Clone</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="upload_file">Upload File</string>
+    <string name="list_files">List Files</string>
 </resources>
