--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="sign_out">Sign Out</string>
     <string name="upload_file">Upload File</string>
     <string name="list_files">List Files</string>
+    <string name="img">img</string>
 </resources>
